cholera 0.7.9.9079
==================

- add latlongOrthoPumpB() prototype.


cholera 0.7.9.9078
==================

- add geodesicMeters().
- use geodesicMeters() in latlongVoronoiC().


cholera 0.7.9.9077
==================

- add addWalkingPathB() and latlong.nearest.pump diagnostic tools.


cholera 0.7.9.9076
==================

- edit note on Voronoi diagrams with latlong data.
- document solution in appendix.


cholera 0.7.9.9075
==================

- add/set plot.euclidean(add.title = TRUE).


cholera 0.7.9.9074
==================

- set asp = 1.6 for latlongSnowMap() and snowMap(latlong = TRUE).


cholera 0.7.9.9073
==================

- compute travel time for latlongNearestPump(metric = "euclidean").


cholera 0.7.9.9072
==================

- add latlongNearestPump(metric = "euclidean")
- enable pump.select in latlongNearestPump(metric = "euclidean").


cholera 0.7.9.9071
==================

- add addVoronoiB().


cholera 0.7.9.9070
==================

- move latlongWalkingPath() to latlongWalkingPath.R and estimate path length.


cholera 0.7.9.9069
==================

- use aes_string() in profile2D().


cholera 0.7.9.9068
==================

- exclude latlong variables in profilePerspective() for profile2D().
- amend ggplot2 syntax in profile2D().


cholera 0.7.9.9067
==================

- add note on Voronoi diagrams with latlong data.


cholera 0.7.9.9066
==================

- migrate from sp::spDistsN1() to geosphere::distGeo().


cholera 0.7.9.9065
==================

- use loess() instead of lm() in meterLatitude().
- fix typo; clean syntax and documentation in meterLatitude() and
  meterLatLong().


cholera 0.7.9.9064
==================

- add/use meterLatitude() and meterLatLong() in latlongVoronoiB().


cholera 0.7.9.9063
==================

- add/set neighborhoodVoronoiB(euclidean.paths = FALSE).


cholera 0.7.9.9062
==================

- fix neighborhoodVoronoiB(pump.select = NULL) and update README example.


cholera 0.7.9.9061